# envelope

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  config_sample.toml  mypy.ini  pyproject.toml
budget/: __init__.py  __main__.py  database.py  finances.py  ledger.py  main.py  parser.py  tools.py  transaction.py
budget/cli/: commands.py
budget/decision_tree/: tree.py
config/: config.toml
envelope/: __init__.py  __main__.py  backend.py  config.py  ledger.py  parser.py  tools.py  transaction.py
envelope/cli/: commands.py  output.py
tests/: conftest.py
tests/integration/test_data/: new_data.csv  raw.csv
