[tool.poetry]
name = "budget"
version = "0.1.0"
description = ""
authors = ["Jannik Hoffjann <hi@hfjn.de>"]

[tool.poetry.dependencies]
python = "^3.6"
peewee = "^3.8"
ofxparse = "^0.20.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = {version = "^3.6",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
